[package]
name = "toysql"
version = "0.1.0"
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toysql"
path = "src/lib.rs"

[[bin]]
name = "toysql-cli"
path = "src/main.rs"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
